--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body{font-family:"Roboto",sans-serif;font-size:12px;font-weight:normal;line-heig
 
 
 .white{max-width:1440px;margin:0 auto;background:url('../cordis/blueberry-bg.jpg');color:#000;font-size:18pt;background-size:100% 100%}
-.whitee{max-width:1440px;margin:0 auto;background:url('../cordis/mm.jpg');color:#000;font-size:18pt;background-size:100% 100%}
+.whitee{max-width:1440px;margin:0 auto;background:url('./cordis/mm.jpg');color:#000;font-size:18pt;background-size:100% 100%}
 
 
 
